--- a/app/src/main/res/layout/activity_environment_list.xml
+++ b/app/src/main/res/layout/activity_environment_list.xml
@@ -37,6 +37,18 @@
             android:fontFamily="@font/myriad_pro_regular"
             android:textSize="25sp"/>
 
+        <TextView
+            android:id="@+id/coming_soon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Coming soon"
+            android:textSize="15sp"
+            android:textColor="#FF0000"
+            android:visibility="gone"
+            android:layout_marginTop="5sp"
+            android:layout_below="@id/heading"
+            android:layout_centerHorizontal="true"/>
+
         <GridLayout
             android:layout_below="@id/heading"
             android:layout_width="match_parent"
