--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,13 +37,24 @@
         />-->
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_alignParentTop="true"
+    <ImageView
+        android:layout_width="32sp"
+        android:layout_height="32sp"
+        android:id="@+id/three_dots"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10sp"
-        android:layout_marginTop="10sp"
+        android:src="@drawable/ic_more_vert_black_24dp"
+        android:layout_marginTop="20sp"/>
+
+
+    <LinearLayout
+
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="35sp"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="17sp"
         android:padding="5sp"
+        android:visibility="gone"
         android:id="@+id/share"
         android:background="@drawable/share_background"
         android:orientation="horizontal"
@@ -64,7 +75,7 @@
             android:textStyle="bold"
             android:textColor="@color/colorPrimary"
             android:paddingStart="2dp"
-            android:paddingEnd="80sp"
+            android:paddingEnd="50sp"
             android:layout_marginStart="10sp"/>
 
 
