--- a/app/src/main/res/layout/meditation_fragment.xml
+++ b/app/src/main/res/layout/meditation_fragment.xml
@@ -2,18 +2,79 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/meditation_image"
-            android:layout_width="match_parent"
-            android:src="@drawable/medigrp"
-            android:layout_centerHorizontal="true"
-            android:layout_height="350sp"/>
+       <View
+           android:id="@+id/med_toolbar"
+           android:layout_width="match_parent"
+           android:layout_height="100sp"
+           android:background="@color/colorPrimary"/>
+
+       <ImageView
+           android:id="@+id/logo"
+           android:layout_width="40sp"
+           android:layout_height="40sp"
+           android:src="@drawable/logo1"
+           android:layout_margin = "10sp"/>
+
+       <TextView
+           android:id="@+id/virtual"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="25sp"
+           android:textStyle="bold"
+           android:textAlignment="center"
+           android:text="Virtual"
+           android:textColor="#fff"
+           android:layout_toEndOf="@id/logo"
+           android:layout_marginTop="10sp"
+           android:fontFamily="@font/myriad_pro_regular"/>
+
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="15sp"
+           android:textStyle="bold"
+           android:textAlignment="center"
+           android:text="Instructor"
+           android:textColor="#fff"
+           android:layout_marginStart="7sp"
+           android:layout_toEndOf="@id/logo"
+           android:layout_marginTop="30sp"
+           android:fontFamily="@font/myriad_pro_regular"/>
+
+       <androidx.cardview.widget.CardView
+           android:id="@+id/meditation_image"
+           android:layout_width="wrap_content"
+           android:layout_marginTop="55sp"
+           android:layout_height="300dp"
+           app:cardElevation="0dp"
+           app:cardCornerRadius="25dp">
+
+           <ImageView
+               android:layout_width="32sp"
+               android:layout_height="32sp"
+               android:layout_marginStart="10sp"
+               android:layout_marginTop="10sp"
+               android:layout_gravity="top|start"
+               android:elevation="1dp"
+               android:src="@drawable/ic_menu_black_24dp"/>
+
+           <ImageView
+               android:layout_width="match_parent"
+               android:src="@drawable/medigrp"
+               android:layout_gravity="center"
+               android:layout_centerHorizontal="true"
+               android:layout_height="match_parent"/>
+
+
+
+       </androidx.cardview.widget.CardView>
 
         <RelativeLayout
             android:id="@+id/med_channel1_layout"
@@ -21,19 +82,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/c1"
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:layout_marginStart="20sp"
+                android:background="@drawable/channel_background"
+                />
+
             <TextView
                 android:id="@+id/channel1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Channel 1"
-                android:textSize="15sp"
-                android:fontFamily="@font/century_gothic"
-                android:layout_marginStart="20sp"
+                android:textSize="25sp"
+                android:fontFamily="@font/myriad_pro_regular"
+                android:layout_marginStart="5sp"
                 android:layout_marginBottom="15sp"
-                android:background="@drawable/channel_background"
                 android:textStyle="bold"
-                android:textColor="#fff"
+                android:layout_toEndOf="@id/c1"
+                android:textColor="@color/colorPrimary"
                 android:paddingStart="15sp"
+                android:paddingTop="3sp"
                 android:paddingEnd="35sp"/>
 
             <HorizontalScrollView
@@ -54,13 +124,11 @@
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_rowWeight="1"
-                        app:cardElevation="10dp"
                         android:layout_marginTop="5sp"
-                        android:layout_marginBottom="5sp"
                         android:layout_columnWeight="1"
                         android:layout_gravity="fill"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:id="@+id/focus_meditation"
                         app:cardCornerRadius="20sp">
 
@@ -77,10 +145,10 @@
                                 android:scaleType="centerCrop"/>
 
                             <TextView
-                                android:id="@+id/focus"
+                                android:id="@+id/focus1"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Focus Meditation"
+                                android:text="Focus"
                                 android:layout_gravity="bottom"
                                 android:fontFamily="@font/century_gothic"
                                 android:textAlignment="center"
@@ -89,6 +157,18 @@
                                 android:textStyle="bold"
                                 android:layout_marginTop="12dp"/>
 
+                            <TextView
+                                android:id="@+id/focus2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Meditation"
+                                android:layout_gravity="bottom"
+                                android:fontFamily="@font/century_gothic"
+                                android:textAlignment="center"
+                                android:textColor="#000000"
+                                android:textSize="15sp"
+                                android:textStyle="bold"/>
+
                         </LinearLayout>
 
                     </androidx.cardview.widget.CardView>
@@ -96,11 +176,10 @@
                     <androidx.cardview.widget.CardView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        app:cardElevation="10dp"
                         android:layout_marginTop="5sp"
                         android:layout_marginBottom="5sp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         app:cardBackgroundColor="#fff"
                         android:background="@color/colorPrimary"
                         android:layout_rowWeight="1"
@@ -120,10 +199,10 @@
                                 android:scaleType="centerCrop"/>
 
                             <TextView
-                                android:id="@+id/mindfulness"
+                                android:id="@+id/mindfulness1"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Mindfullness Meditation"
+                                android:text="Mindfullness"
                                 android:layout_gravity="center"
                                 android:textColor="#000000"
                                 android:textSize="15sp"
@@ -131,17 +210,28 @@
                                 android:textStyle="bold"
                                 android:textAlignment="center"
                                 android:layout_marginTop="12dp"/>
+
+                            <TextView
+                                android:id="@+id/mindfulness2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Meditation"
+                                android:layout_gravity="center"
+                                android:textColor="#000000"
+                                android:textSize="15sp"
+                                android:fontFamily="@font/century_gothic"
+                                android:textStyle="bold"
+                                android:textAlignment="center"/>
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        app:cardElevation="10dp"
                         android:layout_marginTop="5sp"
                         android:layout_marginBottom="5sp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         app:cardBackgroundColor="#fff"
                         android:layout_rowWeight="1"
                         android:layout_columnWeight="1"
@@ -160,10 +250,10 @@
                                 android:scaleType="centerCrop"/>
 
                             <TextView
-                                android:id="@+id/spiritual"
+                                android:id="@+id/spiritual1"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Spiritual Meditation"
+                                android:text="Spiritual"
                                 android:layout_gravity="center"
                                 android:textColor="#000000"
                                 android:textAlignment="center"
@@ -172,7 +262,17 @@
                                 android:textStyle="bold"
                                 android:layout_marginTop="12dp"/>
 
-
+                            <TextView
+                                android:id="@+id/spiritual2"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Meditation"
+                                android:layout_gravity="center"
+                                android:textColor="#000000"
+                                android:textAlignment="center"
+                                android:fontFamily="@font/century_gothic"
+                                android:textSize="15sp"
+                                android:textStyle="bold"/>
 
                         </LinearLayout>
 
@@ -191,19 +291,28 @@
             android:layout_below="@id/med_channel1_layout"
             android:layout_height="wrap_content">
 
+            <ImageView
+                android:id="@+id/c2"
+                android:layout_width="30sp"
+                android:layout_height="30sp"
+                android:layout_marginStart="20sp"
+                android:background="@drawable/channel_background"
+                />
+
             <TextView
                 android:id="@+id/channel2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20sp"
+                android:layout_marginStart="5sp"
                 android:layout_marginBottom="15sp"
-                android:background="@drawable/channel_background"
                 android:paddingStart="15sp"
-                android:fontFamily="@font/century_gothic"
+                android:fontFamily="@font/myriad_pro_regular"
                 android:paddingEnd="35sp"
+                android:layout_toEndOf="@id/c2"
                 android:text="Coming Soon"
-                android:textColor="#fff"
-                android:textSize="15sp"
+                android:paddingTop="3dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <HorizontalScrollView
@@ -223,14 +332,13 @@
                     <androidx.cardview.widget.CardView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        app:cardElevation="10dp"
                         android:layout_marginBottom="5sp"
                         android:layout_marginTop="5sp"
                         android:layout_rowWeight="1"
                         app:cardBackgroundColor="#fff"
                         android:layout_columnWeight="1"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         android:id="@+id/youtube"
                         app:cardCornerRadius="20sp">
 
@@ -253,17 +361,15 @@
                             android:textStyle="bold"
                             android:layout_marginTop="12dp"/>
 
-
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        app:cardElevation="10dp"
                         android:layout_marginTop="5sp"
                         android:layout_marginBottom="5sp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         app:cardBackgroundColor="#fff"
                         android:layout_rowWeight="1"
                         android:layout_columnWeight="1"
@@ -299,11 +405,10 @@
                     <androidx.cardview.widget.CardView
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
-                        app:cardElevation="10dp"
                         android:layout_marginBottom="5sp"
                         android:layout_marginTop="5sp"
-                        android:layout_marginStart="15dp"
-                        android:layout_marginEnd="15dp"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
                         app:cardBackgroundColor="#fff"
                         android:layout_rowWeight="1"
                         android:layout_columnWeight="1"
