--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
-    <!--Contains both the fragment-->
+    <!-- This xml file is the home screen of the app. It contains both meditation and yoga fragment. -->
 
     <FrameLayout
 
