--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".register">
 
+    <!-- It is the register fragment. -->
+
     <TextView
         android:id="@+id/welcome_back"
         android:layout_width="wrap_content"
