--- a/app/src/main/res/layout/activity_spalsh_activity.xml
+++ b/app/src/main/res/layout/activity_spalsh_activity.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".spalsh_activity">
 
+    <!-- This xml file contains splash screen. -->
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
