--- a/app/src/main/res/layout/activity_chakra_meditation.xml
+++ b/app/src/main/res/layout/activity_chakra_meditation.xml
@@ -245,7 +245,7 @@
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/channel1_med4"
+                        android:id="@+id/chakra_card4"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         app:cardElevation="10sp"
