--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,14 +37,14 @@
         />-->
 
 
-    <ImageView
+    <!--<ImageView
         android:layout_width="32sp"
         android:layout_height="32sp"
         android:id="@+id/three_dots"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10sp"
         android:src="@drawable/ic_more_vert_black_24dp"
-        android:layout_marginTop="20sp"/>
+        android:layout_marginTop="20sp"/>-->
 
 
     <LinearLayout
