--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -82,16 +82,16 @@
         android:layout_above="@id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp">
+        android:layout_centerHorizontal="true">
 
         <Button
-            android:layout_weight="1"
             android:text="Register"
             android:textSize="20sp"
             android:fontFamily="@font/candara"
             android:background="@drawable/unchecked_bg"
             android:paddingStart="20sp"
+            android:layout_marginEnd="15sp"
+            android:layout_toStartOf="@id/center_line"
             android:textColor="@color/colorPrimary"
             android:paddingEnd="20sp"
             android:textAllCaps="false"
@@ -100,22 +100,31 @@
 
         <Button
             android:id="@+id/register_fg"
-            android:layout_weight="1"
             android:text="Register"
             android:textSize="20sp"
             android:fontFamily="@font/candara"
             android:background="@drawable/checked_bg"
             android:paddingStart="20sp"
+            android:layout_marginEnd="15sp"
             android:textColor="@color/white"
             android:paddingEnd="20sp"
+            android:layout_toStartOf="@id/center_line"
             android:textAllCaps="false"
             android:layout_width="wrap_content"
             android:layout_height="35sp"/>
 
+        <TextView
+            android:id="@+id/center_line"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:visibility="invisible"/>
+
         <Button
             android:layout_width="wrap_content"
-            android:layout_weight="1"
             android:textSize="20sp"
+            android:layout_marginStart="15sp"
+            android:layout_toEndOf="@id/center_line"
             android:textColor="@color/colorPrimary"
             android:background="@drawable/unchecked_bg"
             android:fontFamily="@font/candara"
@@ -123,15 +132,15 @@
             android:textAllCaps="false"
             android:paddingEnd="25sp"
             android:paddingStart="25sp"
-            android:layout_alignParentEnd="true"
             android:layout_height="35sp"/>
 
         <Button
             android:id="@+id/login_fg"
             android:layout_width="wrap_content"
-            android:layout_weight="1"
             android:textSize="20sp"
+            android:layout_marginStart="15sp"
             android:textColor="@color/white"
+            android:layout_toEndOf="@id/center_line"
             android:background="@drawable/checked_bg"
             android:fontFamily="@font/candara"
             android:text="Log IN"
@@ -139,18 +148,17 @@
             android:textAllCaps="false"
             android:paddingEnd="25sp"
             android:paddingStart="25sp"
-            android:layout_alignParentEnd="true"
             android:layout_height="35sp"/>
 
     </RelativeLayout>
 
-    <view
+    <TextView
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:background="@color/colorPrimary"
         android:layout_above="@id/button"
-        android:layout_marginBottom="40sp"
+        android:layout_marginBottom="30sp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"/>
 
@@ -158,8 +166,7 @@
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20sp"
-        android:layout_marginBottom="20sp"
+        android:layout_marginTop="10sp"
         android:layout_above="@id/line"/>
 
 </RelativeLayout>
