--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="20sp"
         android:text="WELCOME BACK!!"
         android:textSize="30sp"
         android:fontFamily="@font/candara"
@@ -36,7 +36,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:layout_below="@id/glad"
+        android:layout_marginTop="30sp">
 
         <EditText
             android:id="@+id/email_id"
@@ -76,7 +78,7 @@
             android:layout_weight="1"
             android:text="Continue"
             android:layout_below="@id/password"
-            android:layout_marginTop="40sp"
+            android:layout_marginTop="50sp"
             android:textSize="20sp"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/candara"
