--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="20sp"
         android:text="WELCOME!!"
         android:textSize="30sp"
         android:fontFamily="@font/candara"
@@ -35,7 +35,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
+        android:layout_below="@id/glad"
+        android:layout_marginTop="15sp">
 
         <EditText
             android:id="@+id/name"
@@ -62,21 +63,21 @@
             android:layout_below="@id/name"
             android:fontFamily="@font/candara"
             android:textSize="25sp"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="10sp"
             android:paddingBottom="5sp"
             android:paddingTop="5sp"
             android:paddingStart="20sp"
             android:paddingEnd="0dp"
             android:background="@drawable/edit_text_bg"/>
 
-        <LinearLayout
+        <RadioGroup
             android:id="@+id/gender"
             android:layout_width="match_parent"
             android:layout_height="48sp"
             android:layout_marginStart="30sp"
             android:layout_marginEnd="30sp"
             android:layout_below="@id/age"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="10sp"
             android:paddingTop="5dp"
             android:paddingStart="20sp"
             android:paddingEnd="0dp"
@@ -91,7 +92,6 @@
                 android:textSize="25sp"
                 android:paddingBottom="2dp"
                 android:fontFamily="@font/candara"
-                android:checked="true"
                 android:buttonTint="@color/colorPrimary"
                 android:textColor="@color/colorPrimary"
                 />
@@ -103,12 +103,13 @@
                 android:text="Male"
                 android:textSize="25sp"
                 android:paddingBottom="2dp"
+                android:buttonTint="@color/colorPrimary"
                 android:fontFamily="@font/candara"
                 android:textColor="@color/colorPrimary"
                 />
 
 
-        </LinearLayout>
+        </RadioGroup>
 
         <EditText
             android:id="@+id/email_id"
@@ -120,9 +121,10 @@
             android:layout_below="@id/gender"
             android:fontFamily="@font/candara"
             android:textSize="25sp"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="10sp"
             android:paddingBottom="5sp"
             android:paddingTop="5sp"
+            android:inputType="textEmailAddress"
             android:paddingStart="20sp"
             android:paddingEnd="0dp"
             android:background="@drawable/edit_text_bg"/>
@@ -137,7 +139,7 @@
             android:textSize="25sp"
             android:fontFamily="@font/candara"
             android:paddingStart="20sp"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="10sp"
             android:paddingEnd="0dp"
             android:paddingTop="5dp"
             android:inputType="textPassword"
@@ -149,7 +151,7 @@
             android:id="@+id/register"
             android:text="Start"
             android:layout_below="@id/password"
-            android:layout_marginTop="40sp"
+            android:layout_marginTop="10sp"
             android:textSize="20sp"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/candara"
