--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -162,25 +162,58 @@
             android:layout_width="130sp"
             android:layout_height="35sp"/>
 
-       <!-- <TextView
+        <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="or Resister with"
+            android:text="or Register with"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/register"
             android:textColor="@color/colorPrimary"
             android:layout_marginTop="20sp"/>
 
+        <com.google.android.gms.common.SignInButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sign_in_button"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentBottom="false"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/text"
+            android:layout_marginBottom="20dp">
+
+        </com.google.android.gms.common.SignInButton>
+
         <ImageView
             android:layout_width="60sp"
+            android:id="@+id/googleSignIn"
             android:scaleType="fitCenter"
-            android:layout_height="60sp"
+            android:layout_height="40sp"
             android:src="@drawable/google"
-            android:layout_below="@id/text"
+            android:layout_below="@id/sign_in_button"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20sp"/>-->
+            android:layout_marginTop="20sp"/>
 
+<!--        <ImageView-->
+<!--            android:id="@+id/googleSignIn"-->
+<!--            android:layout_width="33.33dp"-->
+<!--            android:layout_height="33.33dp"-->
+<!--            android:src="@drawable/google"-->
+<!--            android:layout_alignParentLeft="true"-->
+<!--            android:layout_marginLeft="150dp"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_marginTop="542dp" />-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/fbSignIn"-->
+<!--            android:layout_width="33.33dp"-->
+<!--            android:layout_height="33.33dp"-->
+<!--            android:src="@drawable/google"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_marginRight="150dp"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_marginTop="542dp" />-->
 
     </RelativeLayout>
 
