--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,6 +93,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10sp"
         android:elevation="1dp"
+        android:id="@+id/s"
         android:src="@drawable/menu_24dp"/>
 
     <LinearLayout
