--- a/app/src/main/res/layout/activity_channel1_med_list.xml
+++ b/app/src/main/res/layout/activity_channel1_med_list.xml
@@ -167,7 +167,7 @@
                                     android:layout_width="100sp"
                                     android:layout_height="100sp"
                                     android:scaleType="centerCrop"
-                                    android:src="@drawable/terrace"/>
+                                    android:src="@drawable/main_building"/>
 
                             </androidx.cardview.widget.CardView>
 
